--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="regional_preferences">Regional Preferences</string>
     <string name="back_gesture_preview">Back Gesture Preview</string>
     <string name="photos_or_videos_permission_flow">Photos or Videos Permission Flow</string>
+    <string name="post">Waiter/Waitress</string>
+    <string name="selected_text">You Not Selected Any Gender Yet</string>
+    <string name="hiring_sentence">The 5 Star Taj Hotel is hiring a new waiter/waitress for the busy season.</string>
+
 </resources>
